@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>io.mosip.kernel</groupId>
 		<artifactId>kernel-parent</artifactId>
-		<version>1.0.6</version>
+		<version>1.2.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>kernel-crypto-jce</artifactId>
 	<version>1.0.6</version>
 	<packaging>jar</packaging>
 	<name>kernel-crypto-jce</name>
 	<properties>
-		<kernel.core.version>1.0.6</kernel.core.version>
+		<kernel.core.version>1.2.0-SNAPSHOT</kernel.core.version>
 		<jose4j.version>0.6.5</jose4j.version>
 	</properties>
 	<dependencies>
@@ -27,4 +27,18 @@
 			<version>${jose4j.version}</version>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+                    <maven.compiler.source>11</maven.compiler.source>
+                    <maven.compiler.target>11</maven.compiler.target>
+                    <compilerArgs>
+                		<arg>--add-exports</arg><arg>java.base/sun.security.rsa=ALL-UNNAMED</arg>
+                </compilerArgs>
+                </configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
